# stock-portfolio-tracker

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  tag_version.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
data/in/: config.json  example_config.json  example_transactions.csv  transactions.csv
src/stock_portfolio_tracker/: __init__.py  __main__.py
src/stock_portfolio_tracker/entry_points/: __init__.py  _pipeline.py
src/stock_portfolio_tracker/exceptions/: __init__.py  _exceptions.py  exceptions.py
src/stock_portfolio_tracker/modelling/: __init__.py  _modelling.py  _modelling_benchmark.py  _modelling_portfolio.py  _utils.py  modelling.py
src/stock_portfolio_tracker/preprocessing/: __init__.py  _factories.py  _interfaces.py  _preprocessing.py  factories.py  preprocessing.py
src/stock_portfolio_tracker/reporting/: __init__.py  _reporting.py  reporting.py
src/stock_portfolio_tracker/utils/: __init__.py  _decorators.py  _enums.py  _functions.py  _models.py  _multithreading.py  decorators.py  models.py  multithreading.py
stock_portfolio_tracker/: main.py
stock_portfolio_tracker/entry_points/: _pipeline.py
stock_portfolio_tracker/modelling/: _modelling_benchmark.py  _modelling_portfolio.py  _utils.py  modelling.py
stock_portfolio_tracker/objetcs/: __init__.py  dataclasses.py  utils.py
stock_portfolio_tracker/preprocessing/: preprocessing.py
stock_portfolio_tracker/reporting/: __init__.py  reporting.py
stock_portfolio_tracker/scripts/: __init__.py  main.py  preprocess.py
stock_portfolio_tracker/utils/: decorators.py  models.py
tests/: __init__.py
tests/integration/: __init__.py  generate_artifacts.py  integration_artifacts.py  test_modelling.py  test_pipeline.py
tests/integration/api_mocked_artifacts/: AAPL_data.pkl  AMZN_data.pkl  IUSA.DE_data.pkl  MA_data.pkl  MCO_data.pkl  MSFT_data.pkl  NVDA_data.pkl  PYPL_data.pkl  V_data.pkl  currency_exchange_rate.pkl
tests/integration/artifacts/: asset_distribution.pkl  asset_dividends.pkl  asset_prices.pkl  assets_distribution.pkl  assets_vs_benchmark.pkl  (+10 more)
tests/unit/: __init__.py  test_calc_asset_dist.py  test_calc_curr_gain.py  test_calc_curr_perc_gain.py  test_calc_curr_qty.py  test_calc_curr_val.py  test_calc_twr.py  test_calculate_benchmark_quantity.py  test_calculate_current_percent_gain.py  test_calculate_current_quantity.py  test_calculate_current_value.py  test_modelling.py  test_simulate_benchmark_proportional.py  tests_modelling.py
(+1 files in other folders)
