[project]
name = "stock-portfolio-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.2",
    "pandas>=2.2.2",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.9.0",
    "loguru>=0.7.2",
    "click>=8.1.7",
    "pre-commit>=3.7.1",
    "ruff>=0.4.6",
    "pytest>=8.2.2",
]

[project.scripts]
stock-portfolio-tracker = "stock_portfolio_tracker.__main__:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN002", "ANN003", "ANN401", "COM812", "D203", "D205", "D213", "D402", "EXE002", "FA102",
    "ISC001", "PD901", "PGH003", "PLR0913", "S101", "TRY003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
